# DRL-BasicUserModel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
base_users/: MANIFEST.in  apps.py  forms.py  models.py  pyproject.toml  urls.py
base_users/base_users/: views.py
base_users/base_users/templates/base_users/: profile.html
base_users/django_reusable_libraries_base_users.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
