[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_reusable_libraries-base_users"
version = "0.1.0"
description = "Reusable Django app for user login, logout, and profile management"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Ojas", email = "helloojasmutreja@gmail.com" }
]

dependencies = [
  "django>=4.0"
]
[project.urls]
Homepage = "https://github.com/HelloOjasMutreja/django-reusable-libraries-base-users"
Issues = "https://github.com/HelloOjasMutreja/django-reusable-libraries-base-users/issues"

[project.urls]
Homepage = "https://github.com/HelloOjasMutreja/DRL-BasicUserModel"
