[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-reusable-libraries-base-users"
version = "0.1.9"
description = "Reusable Django app for user login, logout, and profile management"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Ojas", email = "helloojasmutreja@gmail.com" }
]

dependencies = [
  "django>=4.0"
]

[project.urls]
Homepage = "https://github.com/HelloOjasMutreja/DRL-BasicUserModel"
Issues = "https://github.com/HelloOjasMutreja/DRL-BasicUserModel/issues"
Source = "https://github.com/HelloOjasMutreja/DRL-BasicUserModel"
